--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,6 +12,6 @@ $gray: #eaeaea;
 
 // Font Variables
 $primary-font: 'Roboto', sans-serif;
-$secondary-font: 'Playfair Display', serif;
+$secondary-font: '나눔고딕', serif;
 $tertiary-font: 'BwNistaInt-xBd';
 $icon-font: 'themify';
