--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ layout: default
 
 {% if site.data.settings.disqus-identifier %} {% include disqus-comments.html %} {% endif %}
 
-<!-- blog -->
+<!-- blog 
 <section class="section">
   <div class="container">
     <div class="row">
@@ -52,4 +52,4 @@ layout: default
     </div>
   </div>
 </section>
-<!-- /blog -->
+ /blog -->
