--- a/_includes/blog-section.html
+++ b/_includes/blog-section.html
@@ -1,4 +1,4 @@
-<!-- blog -->
+<!-- blog 
 <section class="section">
   <div class="container">
     <div class="row">
@@ -11,4 +11,4 @@
     </div>
   </div>
 </section>
-<!-- /blog -->
+ /blog -->
