--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -47,7 +47,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h2 class="section-title">My Clients</h2>
+        <h2 class="section-title">사용가능 기술</h2>
       </div>
     </div>
     {% include client-slider.html %}
